# rusty-book-manager

./: Cargo.toml  Dockerfile  Makefile.toml  README.md  compose.yml
.github/workflows/: ci.yml
adapter/: Cargo.toml
adapter/migrations/: 20241007131241_start.down.sql  20241007131241_start.up.sql
adapter/src/database/: mod.rs
adapter/src/database/model/: auth.rs  book.rs  checkout.rs  user.rs
adapter/src/redis/: mod.rs
adapter/src/repository/: auth.rs  book.rs  checkout.rs  user.rs
adapter/src/repository/fixtures/: book.sql  common.sql
api/: Cargo.toml
api/src/: openapi.rs
api/src/handler/: auth.rs  book.rs  checkout.rs  health.rs  user.rs
api/src/model/: auth.rs  book.rs  checkout.rs  user.rs
api/src/route/: auth.rs  book.rs  health.rs  user.rs  v1.rs
api/tests/api/: book.rs  helper.rs
data/: initial_setup.sql
kernel/: Cargo.toml
kernel/src/model/: id.rs  list.rs
registry/: Cargo.toml
registry/src/: lib.rs
shared/: Cargo.toml
shared/src/: config.rs  env.rs  error.rs
src/: main.rs
