[package]
name = "rusty-book-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["api", "kernel", "adapter", "registry", "shared"]

[dependencies]
adapter.workspace = true
api.workspace = true
kernel.workspace = true
registry.workspace = true
shared.workspace = true
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
sqlx.workspace = true
async-trait.workspace = true
derive-new.workspace = true

[workspace.dependencies]
derive-new = "0.7.0"
adapter = { path = "./adapter" }
api = { path = "./api" }
kernel = { path = "./kernel" }
registry = { path = "./registry" }
shared = { path = "./shared" }
anyhow = "1.0.89"
axum = { version = "0.7.7", features = ["macros"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "chrono",
    "migrate",
    "uuid",
] }
tokio = { version = "1.40.0", features = ["full"] }
rstest = "0.23.0"
async-trait = "0.1.83"
