[package]
name = "adapter"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
kernel.workspace = true
shared.workspace = true
async-trait.workspace = true
bcrypt.workspace = true
chrono.workspace = true
derive-new.workspace = true
secrecy.workspace = true
redis.workspace = true
sqlx.workspace = true

[dev-dependencies]
anyhow.workspace = true
