[package]
name = "kernel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
derive-new.workspace = true
chrono.workspace = true
mockall.workspace = true
serde.workspace = true
strum.workspace = true
sqlx.workspace = true
shared.workspace = true
uuid.workspace = true
utoipa.workspace = true

[dev-dependencies]
anyhow.workspace = true
